feat: add upload videos to issues
